--- a/github/styles.css
+++ b/github/styles.css
@@ -1,1 +1,62 @@
-/* Add your CSS here */
+body {
+  color: #586069;
+  font-family: Helvetica,Arial,sans-serif;
+  text-align: center;
+}
+
+p {
+  font-size: 17px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+header {
+  display: flex;
+  flex-direction: column;
+}
+
+h1 {
+  font-size: 35px;
+  margin-left: 15%;
+  margin-right: 15%;
+  color: #24292e;
+  padding-top: 50px;
+  margin-bottom: 0px;
+}
+
+h2 {
+  color: #24292e;
+  font-size: 15px;
+  margin-left: 10%;
+  margin-right: 10%;
+}
+
+.container-both {
+  display: flex;
+}
+
+.container1,
+.container2 {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+}
+
+img {
+  display: flex;
+  align-self: flex-start;
+  justify-content: center;
+}
+
+.click {
+  font-size: 15px;
+  margin-left: 20%;
+  margin-right: 20%;
+  display: flex;
+  justify-content: space-around;
+}
+
+a {
+  color: #0366d6;
+  text-decoration: none;
+}
