--- a/airbnb/styles.css
+++ b/airbnb/styles.css
@@ -10,11 +10,21 @@ body {
 
 .container2{
     display: flex;
+    justify-content: space-around;
 }
 
 .container3 {
     display: flex;
-    justify-content: center;
+}
+
+.date {
+  margin-right: auto;
+  flex: 1;
+}
+
+.head2 {
+  margin-right: auto;
+  flex: 1;
 }
 
 header {
@@ -36,11 +46,22 @@ p {
   padding: 8px;
 }
 
+.list {
+  display: flex;
+  font-size: 13px;
+  border: 1px solid rgb(200, 200, 200);
+  padding-right: 100px;
+  align-items: center;
+  list-style: none;
+}
+
+img {
+  padding-right: 10px;
+}
+
 ul {
   display: flex;
   justify-content: space-around;
-  border: 1px solid black;
-  list-style: none;
 }
 
 a {
