--- a/amazon/styles.css
+++ b/amazon/styles.css
@@ -1,1 +1,32 @@
-/* Add your CSS here */
+h1 {
+  color: #e47911;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+  color: #111;
+  font-family: Arial, Helvetica, sans-serif;
+  border-bottom: 1px solid rgb(200, 200, 200);
+  padding-bottom: 8px;
+}
+
+p {
+  color: rgb(100, 100, 100);
+}
+
+a {
+  color: #0066c0;
+}
+
+li {
+  list-style: none;
+}
+
+ul {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+.container {
+  padding: 6px 50px 30px 0px;
+}
