--- a/github/styles.css
+++ b/github/styles.css
@@ -31,32 +31,20 @@ h2 {
   margin-right: 10%;
 }
 
-.container-both {
-  display: flex;
-}
-
-.container1,
-.container2 {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-}
-
-img {
-  display: flex;
-  align-self: flex-start;
-  justify-content: center;
-}
-
-.click {
+.links {
   font-size: 15px;
   margin-left: 20%;
   margin-right: 20%;
   display: flex;
   justify-content: space-around;
+  padding-bottom: 50px;
 }
 
 a {
   color: #0366d6;
   text-decoration: none;
+}
+
+ul {
+  display: flex;
 }
